Trying to fix overlapping, no luck today! :(

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,11 +62,16 @@
     font-size: 1rem;
 }
 
-.sidebar-video{
+.sidebar-video {
     display: flex;
     flex-direction: row;
 }
 
-.sidebar-video-title{
-font-weight: bold;
+.sidebar-video-title {
+    font-weight: bold;
+}
+
+.sidebar-video-info {
+    min-width: 250px;
+    margin-left: 10px;
 }
